# cxsign

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  X星签到api记录.md  build.lua  build.rs  licenserc.toml  package.json  pnpm-lock.yaml  svelte.config.js  tsconfig.json  vite.config.ts  超星签到api记录.md
.github/workflows/: rust.yml
crates/activity/: Cargo.toml
crates/activity/src/: lib.rs
crates/activity/src/protocol/: active_list.rs  analysis.rs  mod.rs  ppt_sign.rs  pre_sign.rs
crates/activity/src/sign/: gesture.rs  location.rs  mod.rs  normal.rs  photo.rs  qrcode.rs  raw.rs  signcode.rs
crates/base/: Cargo.toml
crates/base/src/: course.rs  lib.rs  location.rs  photo.rs
crates/base/src/activity/: mod.rs
crates/base/src/activity/sign/: base.rs  gesture.rs  location.rs  mod.rs  normal.rs  photo.rs  qrcode.rs  signcode.rs
crates/base/src/protocol/: active_list.rs  back_clazz_data.rs  check_signcode.rs  get_attend_info.rs  mod.rs  other.rs  pan_chaoxing.rs  pan_list.rs  pan_token.rs  pan_upload.rs  ppt_sign.rs  pre_sign.rs  sign_detail.rs
crates/base/src/user/: mod.rs  session.rs
crates/cxsign_activity/: Cargo.toml
crates/cxsign_activity/src/: lib.rs
crates/cxsign_activity/src/protocol/: active_list.rs  analysis.rs  check_signcode.rs  get_attend_info.rs  mod.rs  ppt_sign.rs  pre_sign.rs  sign_detail.rs
crates/cxsign_activity/src/sign/: gesture.rs  location.rs  mod.rs  normal.rs  photo.rs  qrcode.rs  raw.rs  signcode.rs
crates/cxsign_activity/src/utils/: mod.rs
crates/cxsign_app/: Cargo.toml
crates/cxsign_app/src/: lib.rs  utils.rs
crates/cxsign_app/src/signner/: mod.rs
crates/cxsign_app/src/signner/default/: gesture_or_signcode.rs  location.rs  mod.rs  normal_or_raw.rs  photo.rs  qrcode.rs
crates/cxsign_captcha/: Cargo.toml  README.md
crates/cxsign_captcha/src/: hash.rs  lib.rs  protocol.rs  utils.rs
crates/cxsign_dir/: Cargo.toml
crates/cxsign_dir/src/: lib.rs
crates/cxsign_error/: Cargo.toml
crates/cxsign_error/src/: lib.rs
crates/cxsign_imageproc/: Cargo.toml
crates/cxsign_imageproc/src/: lib.rs  utils.rs
crates/cxsign_internal/: Cargo.toml
crates/cxsign_internal/src/: lib.rs
crates/cxsign_login/: Cargo.toml
crates/cxsign_login/src/: lib.rs  protocol.rs  utils.rs
crates/cxsign_obfuscate/: Cargo.toml
crates/cxsign_obfuscate/src/: lib.rs
crates/cxsign_pan/: Cargo.toml
crates/cxsign_pan/src/: lib.rs  multipart.rs  protocol.rs
crates/cxsign_signner/: Cargo.toml
crates/cxsign_signner/src/: lib.rs  utils.rs
crates/cxsign_signner/src/default/: gesture_or_signcode.rs  location.rs  mod.rs  normal_or_raw.rs  photo.rs  qrcode.rs
crates/cxsign_store/: Cargo.toml
crates/cxsign_store/src/: lib.rs
crates/cxsign_store/src/sql/: account_table.rs  exclude_table.rs  mod.rs
crates/cxsign_types/: Cargo.toml
crates/cxsign_types/src/: course.rs  dioption.rs  lib.rs  location.rs  photo.rs
crates/cxsign_types/src/protocol/: back_clazz_data.rs  get_location_log.rs
crates/cxsign_types/src/store/: course.rs  location.rs
crates/cxsign_unused/: Cargo.toml
crates/cxsign_unused/src/: protocol.rs
crates/cxsign_user/: Cargo.toml
crates/cxsign_user/src/: lib.rs  protocol.rs  session.rs
crates/cxsign_utils/: Cargo.toml
crates/cxsign_utils/src/: lib.rs
crates/dir/: Cargo.toml
crates/dir/src/: lib.rs
crates/error/: Cargo.toml
crates/login/: Cargo.toml
crates/login/src/: lib.rs  protocol.rs  utils.rs
crates/pan/: Cargo.toml
crates/pan/src/: lib.rs  protocol.rs
crates/photo/: Cargo.toml
crates/store/: Cargo.toml
crates/store/src/: lib.rs
crates/store/src/sql/: account_table.rs  alias_table.rs  course_table.rs  location_table.rs  mod.rs
crates/types/: Cargo.toml
crates/types/src/: course.rs  lib.rs  location.rs  photo.rs
crates/types/src/protocol/: back_clazz_data.rs  get_location_log.rs  mod.rs
crates/types/src/store/: course.rs  location.rs  mod.rs
crates/unused/: Cargo.toml
crates/unused/src/: protocol.rs
crates/user/: Cargo.toml
crates/user/src/: cookies.rs  lib.rs  protocol.rs  session.rs
crates/utils/: Cargo.toml
crates/utils/src/: lib.rs
res/: logo.rc
src/: app.html  cli.rs  gui.rs  lib.rs  main.rs  tools.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: android.json  main.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  signner.rs  state.rs  tools.rs
src-tauri/src/command/: account.rs  course.rs  mod.rs  sign.rs  tools.rs
src/activity/: activity.rs  mod.rs  sign.rs
src/cli/: arg.rs  location.rs  mod.rs  pos.rs  sign.rs  single_sign.rs
src/cli/arg/: mod.rs
src/data/: mod.rs
src/lib/: CourseSigns.svelte  HomeCourses.svelte  HomeSigns.svelte  HomeUsers.svelte  Login.svelte
src/lib/commands/: account.ts  course.ts  sign.ts  tools.ts
src/lib/sign/: Gesture.svelte  Location.svelte  Other.svelte  QrCode.svelte  SignLayout.svelte  Signcode.svelte
src/lib/sign/components/: GestureInput.svelte  Users.svelte
src/protocol/: account_manage.rs  active_list.rs  analysis.rs  back_clazz_data.rs  check_signcode.rs  get_attend_info.rs  get_location_log.rs  login_enc.rs  login_page.rs  mod.rs  other.rs  pan_chaoxing.rs  pan_list.rs  pan_token.rs  pan_upload.rs  ppt_sign.rs  pre_sign.rs  sign_detail.rs
src/routes/: +layout.svelte  +page.svelte
src/session/: cookies.rs  course.rs  mod.rs
src/sign_session/: cookies.rs  course.rs  mod.rs  session.rs  sign_cookies.rs  sign_session.rs
src/sign_session/activity/: activity.rs  mod.rs  sign.rs
src/tools/: account.rs  mod.rs  sign.rs
src/utils/: account.rs  address.rs  api.rs  mod.rs  photo.rs  query.rs  sign.rs  sql.rs
src/xddcc/: lesson.rs  live.rs  mod.rs  protocol.rs  room.rs  tools.rs
ui/: accountlist.slint  activitylist.slint  courselist.slint  icon.slint  loginwidget.slint  mainwidget.slint  mainwindow.slint
