# Copyright (C) 2024 worksoup <https://github.com/worksoup/>
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU Affero General Public License as published
# by the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU Affero General Public License for more details.
#
# You should have received a copy of the GNU Affero General Public License
# along with this program.  If not, see <https://www.gnu.org/licenses/>.

[package]
name = "xdsign"
version = "0.0.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["completions"]
completions = ["completion-nu", "completion-carapace", "completion-fig"]
completion-nu = ["clap_complete_command", "clap_complete_command/nushell"]
completion-carapace = ["clap_complete_command", "clap_complete_command/carapace"]
completion-fig = ["clap_complete_command", "clap_complete_command/fig"]

[dependencies]
x_l4rs = { git = "https://github.com/learturely/x_l4rs.git" }
#authxd = { path = "../../authxd" }
# tikv-jemallocator = "0.5"
clap = { version = "4.5", features = ["derive"] }
cxlib = { git = "https://github.com/worksoup/newsign.git", branch = "dev-v0.2" }
clap_complete_command = { version = "0.6", default-features = false, optional = true }
# cxsign = { path = "../newsign/" }
env_logger = "0.11"
indicatif = "0.17"
indicatif-log-bridge = "0.2"
inquire = "0.7"
log = { version = "0.4", features = ["release_max_level_info"] }
wnewtype = { git = "https://github.com/worksoup/wnewtype.git" }
xddcc = { git = "https://github.com/learturely/xddcc.git" }
xdsign_data = { git = "https://github.com/learturely/xdsign_data.git" }

[profile.release]
panic = "abort"
codegen-units = 1
lto = "fat"
strip = "symbols"
