# Copyright (C) 2024 worksoup <https://github.com/worksoup/>
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU Affero General Public License as published
# by the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU Affero General Public License for more details.
#
# You should have received a copy of the GNU Affero General Public License
# along with this program.  If not, see <https://www.gnu.org/licenses/>.

[package]
name = "cxsign"
version = "0.5.1"
edition = "2021"

[lib]
name = "cxsign"
crate-type = ["lib", "cdylib", "staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["completions"]
completions = ["completion-nu", "completion-carapace", "completion-fig"]
completion-nu = ["clap_complete_command", "clap_complete_command/nushell"]
completion-carapace = ["clap_complete_command", "clap_complete_command/carapace"]
completion-fig = ["clap_complete_command", "clap_complete_command/fig"]

[dependencies]
# tikv-jemallocator = "0.5"
clap = { version = "4.5", features = ["derive"] }
clap_complete_command = { version = "0.6", default-features = false, optional = true }
cxlib = { path = "cxlib" }
# cxsign = { path = "../newsign/" }
env_logger = "0.11"
inquire = "0.7"
log = { version = "0.4", features = ["release_max_level_info"] }
chrono = "0.4"

[profile.release]
panic = "abort"
codegen-units = 1
lto = "fat"
strip = "symbols"
