# Copyright (C) 2024 worksoup <https://github.com/worksoup/>
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU Affero General Public License as published
# by the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU Affero General Public License for more details.
#
# You should have received a copy of the GNU Affero General Public License
# along with this program.  If not, see <https://www.gnu.org/licenses/>.

[package]
name = "xdsign"
version = "0.0.9"
edition = "2021"

[lib]
name = "xdsign"
crate-type = ["lib", "cdylib", "staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["completions", "ui_solver"]
all_ui_solver = ["slide_ui_solver", "ui_solver", "obstacle_ui_solver", "rotate_ui_solver"]
ui_solver = ["icon_click_ui_solver", "text_click_ui_solver"]
completions = ["completion-nu", "completion-carapace", "completion-fig"]
completion-nu = ["clap_complete_command", "clap_complete_command/nushell"]
completion-carapace = ["clap_complete_command", "clap_complete_command/carapace"]
completion-fig = ["clap_complete_command", "clap_complete_command/fig"]
slide_ui_solver = ["cxlib_captcha/slide_ui_solver"]
rotate_ui_solver = ["cxlib_captcha/rotate_ui_solver"]
obstacle_ui_solver = ["cxlib_captcha/obstacle_ui_solver"]
icon_click_ui_solver = ["cxlib_captcha/icon_click_ui_solver"]
text_click_ui_solver = ["cxlib_captcha/text_click_ui_solver"]

[dependencies]
# tikv-jemallocator = "0.5"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
clap_complete_command = { version = "0.6", default-features = false, optional = true }
cxlib = { git = "https://github.com/worksoup/cxlib.git" }
# cxsign = { path = "../cxlib/" }
env_logger = "0.11"
indicatif = "0.17"
indicatif-log-bridge = "0.2"
inquire = "0.7"
log = { version = "0.4", features = ["release_max_level_info"] }
wnewtype = { git = "https://github.com/worksoup/wnewtype.git" }
x_l4rs = { git = "https://github.com/learturely/x_l4rs.git", default-features = false, features = ["cxlib_integrated"] }
xddcc = { git = "https://github.com/learturely/xddcc.git" }
xdsign_data = { git = "https://github.com/learturely/xdsign_data.git" }

[profile.release]
panic = "abort"
#codegen-units = 1
#lto = "fat"
strip = "symbols"

[target.'cfg(any(target_os = "linux", target_os = "windows", target_os = "macos"))'.dependencies]
cxlib_captcha = { git = "https://github.com/worksoup/cxlib.git" }