[package]
name = "cxsign"
version = "0.0.0"
description = "A Tauri App"
authors = ["worksoup"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "cxsign_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
cxsign_internal = { git = "https://github.com/worksoup/cxsign.git", branch = "newsign" }
env_logger = "0.11"
image = "0.25"
log = { version = "0.4", features = ["release_max_level_info"] }
percent-encoding = "2.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-barcode-scanner = "2.0.0-beta"
tauri-plugin-shell = "2.0.0-beta"
# thread_local = "1.1"
# toml = "0.8"
ureq = { version = "2.9", features = ["cookies", "json"] }
# [target.'cfg(target_os = "android")'.dependencies]
# file-picker-android = { git = "https://github.com/Berrysoft/file-picker-android.git" }

# [target.'cfg(not(target_os = "android"))'.dependencies]
tauri-plugin-dialog = "2.0.0-beta"
[target.'cfg(any(target_os = "linux", target_os = "windows", target_os = "macos"))'.dependencies]
xcap = { version = "0.0.8" }

[profile.release]
panic = "abort"
codegen-units = 1
lto = "fat"
strip = "symbols"
