[package]
name = "activity"
edition = "2021"
version.workspace = true
authors.workspace = true

[dependencies]
base = { path = "../base" }
percent-encoding.workspace = true
serde = { workspace = true, features = ["derive"] }
ureq = { workspace = true, features = ["cookies", "json"] }
user = { path = "../user" }
utils = { path = "../utils" }
chrono = "0.4.35"
num_enum = "0.7.2"
