[package]
name = "activity"
edition = "2021"
version.workspace = true
authors.workspace = true

[dependencies]
chrono.workspace = true
log.workspace = true
num_enum = "0.7"
percent-encoding.workspace = true
serde = { workspace = true, features = ["derive"] }
types = { path = "../types" }
ureq = { workspace = true, features = ["cookies", "json"] }
user = { path = "../user" }
utils = { path = "../utils" }
