[package]
name = "base"
version.workspace = true
authors.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dir = { path = "../dir" }
user = { path = "../user" }
photo = { path = "../photo" }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
cookie_store.workspace = true
rand = "0.8"
percent-encoding = "2.3"
unicode-width = "0.1"
chrono = "0.4"
hex = "0.4"
des = "0.8"
inquire = "0.7"
num_enum = "0.7"
ureq = { workspace = true, features = ["cookies", "json"] }
