[package]
name = "base"
version.workspace = true
authors.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dir = { path = "../dir" }
user = { path = "../user" }
serde = { workspace = true, features = ["derive"] }
rand = "0.8"
chrono = "0.4"
num_enum = "0.7"
ureq = { workspace = true, features = ["cookies", "json"] }
utils = { path = "../utils" }
pan = { path = "../pan" }