[package]
name = "cxsign_captcha"
edition = "2021"
version.workspace = true
authors.workspace = true

[dependencies]
chrono.workspace = true
cxsign_obfuscate = { path = "../cxsign_obfuscate" }
hex = "0.4"
percent-encoding.workspace = true
rand.workspace = true
ureq = { workspace = true, features = ["cookies", "json"] }