[package]
name = "cxsign_login"
version.workspace = true
authors.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cookie_store.workspace = true
des = "0.8"
log.workspace = true
cxsign_error = { path = "../cxsign_error" }
hex = "0.4"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
ureq = { workspace = true, features = ["cookies", "json"] }
#hex-literal = "0.4"
