[package]
name = "cxsign_types"
version.workspace = true
authors.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cxsign_dir = { path = "../cxsign_dir" }
cxsign_pan = { path = "../cxsign_pan" }
cxsign_store = { path = "../cxsign_store" }
cxsign_user = { path = "../cxsign_user" }
log.workspace = true
rand.workspace = true
serde = { workspace = true, features = ["derive"] }
sqlite.workspace = true
ureq = { workspace = true, features = ["cookies", "json"] }