[package]
name = "cxsign_user"
edition = "2021"
version.workspace = true
authors.workspace = true

[dependencies]
cookie_store.workspace = true
cxsign_dir = { path = "../cxsign_dir" }
cxsign_error = { path = "../cxsign_error" }
cxsign_login = { path = "../cxsign_login" }
log.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
ureq = { workspace = true, features = ["cookies", "json"] }