[package]
name = "login"
edition = "2021"
version.workspace = true
author.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cookie_store.workspace = true
des = "0.8"
dir = { path = "../dir" }
log.workspace = true
error = { path = "../error" }
hex = "0.4"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
ureq.workspace = true
#hex-literal = "0.4"
