[package]
name = "store"
edition = "2021"
version.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base = { path = "../base" }
dir = { path = "../dir" }
user = { path = "../user" }
sqlite = "0.34"