[package]
name = "store"
edition = "2021"
version.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dir = { path = "../dir" }
log.workspace = true
sqlite.workspace = true
user = { path = "../user" }