[package]
name = "types"
version.workspace = true
authors.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dir = { path = "../dir" }
pan = { path = "../pan" }
rand = "0.8"
serde = { workspace = true, features = ["derive"] }
sqlite = "0.34"
store = { path = "../store" }
ureq = { workspace = true, features = ["cookies", "json"] }
user = { path = "../user" }