[package]
name = "types"
edition = "2021"
version.workspace = true
author.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dir = { path = "../dir" }
log.workspace = true
pan = { path = "../pan" }
rand.workspace = true
serde = { workspace = true, features = ["derive"] }
sqlite.workspace = true
store = { path = "../store" }
ureq = { workspace = true, features = ["cookies", "json"] }
user = { path = "../user" }