[package]
name = "types"
version.workspace = true
authors.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dir = { path = "../dir" }
log.workspace = true
pan = { path = "../pan" }
rand.workspace = true
serde = { workspace = true, features = ["derive"] }
sqlite.workspace = true
store = { path = "../store" }
ureq = { workspace = true, features = ["cookies", "json"] }
user = { path = "../user" }