[package]
name = "user"
edition = "2021"
version.workspace = true
authors.workspace = true

[dependencies]
cookie_store.workspace = true
dir = { path = "../dir" }
log.workspace = true
error = { path = "../error" }
login = { path = "../login" }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
ureq = { workspace = true, features = ["cookies", "json"] }